--- a/README.html
+++ b/README.html
@@ -367,7 +367,8 @@ summary {
 
 <div id="moer-mpg-data-analyis" class="section level1">
 <h1>moer-mpg-data-analyis</h1>
-<p>Master level course in Physical Geography at the University of Marburg The HTML Version currently resides at <!-- https://ilias.uni-marburg.de/data/UNIMR/lm_data/lm_2287352/index.html --> <a href="https://geomoer.github.io/moer-mpg-data-analysis/" class="uri">https://geomoer.github.io/moer-mpg-data-analysis/</a></p>
+<p>Master level course in Physical Geography at the University of Marburg.</p>
+<p>The HTML Version currently resides at <!-- https://ilias.uni-marburg.de/data/UNIMR/lm_data/lm_2287352/index.html --> <a href="https://geomoer.github.io/moer-mpg-data-analysis/" class="uri">https://geomoer.github.io/moer-mpg-data-analysis/</a></p>
 </div>
 
 
